Imagen del perfil y Estilos para la imagen del perfil, terminados. Estilos en general, terminados.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,9 +21,6 @@ main {
   padding: 4.6rem 0 4rem 2.6rem;
 }
 
-/* .quien__logo {
-  border: 2px solid rebeccapurple;
-} */
 
 .quien__soy {
   font-weight: 700;
@@ -106,9 +103,62 @@ main {
   background: #0077B5;
 }
 
-.logo__perfil {
+.box__imagen {
+  position: relative;
   width: 330px;
-  height: 368px;
+  height: 330px;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.box__imagen::before {
+  content: '';
+  position: absolute;
+  inset: -10px 120px;
+  background: linear-gradient(315deg, #252526, #00B6F0);
+  transition: 0.5s;
+  animation: animate 4s linear infinite;
+}
+
+.box__imagen:hover::before {
+  inset: -20px 0px;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.box__imagen::after {
+  content: '';
+  position: absolute;
+  inset: 6px;
+  background: #99C9FF;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+
+.conteiner__imagen {
+  position: absolute;
+  inset: 6.5px;
+  z-index: 3;
+}
+
+.conteiner__imagen img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+  pointer-events: none;
 }
 
 /* Sobre Mi */
@@ -181,10 +231,6 @@ main {
 .skills__lista span {
   padding-left: 7px;
 }
-
-/* .skill__imagen:hover {
-  transform: scale(90);
-} */
 
 /* Hobbies */
 .hobbies {
@@ -492,10 +538,10 @@ textarea {
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-box-shadow: 0 0 0 30px white inset !important;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
 
 .container__btn {
@@ -632,11 +678,6 @@ input:-webkit-autofill:active{
   width: 50%;
 }
 
-/* .contacto__form [required]:invalid:not(:focus):not(:placeholder-shown) {
-  border: thin solid #f44336;
-
-} */
-
 .contacto__form__error {
   padding-left: 1rem;
   font-size: 85%;
@@ -684,6 +725,28 @@ input:-webkit-autofill:active{
 .banner.night .enlace__link,
 .banner.night .contacto__col p {
   color: #fff;
+}
+
+.banner.night .box__imagen {
+  position: relative;
+  width: 330px;
+  height: 330px;
+  background: rgba(37, 37, 38, 1);
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.banner.night .box__imagen::before {
+  content: '';
+  position: absolute;
+  inset: -10px 120px;
+  background: linear-gradient(315deg, #ffffff, #00B6F0);
+  transition: 0.5s;
+  animation: animate 4s linear infinite;
+}
+
+.banner.night .box__imagen:hover::before {
+  inset: -20px 0px;
 }
 
 .banner.night .enlace__link:hover {
@@ -746,13 +809,13 @@ input:-webkit-autofill:active{
 }
 
 .banner.night input:-webkit-autofill,
-.banner.night input:-webkit-autofill:focus, 
-.banner.night input:-webkit-autofill:hover, 
-.banner.night input:-webkit-autofill:active{
-    -webkit-box-shadow: 0 0 0 30px #252526 inset !important;
+.banner.night input:-webkit-autofill:focus,
+.banner.night input:-webkit-autofill:hover,
+.banner.night input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #252526 inset !important;
 }
 
-.banner.night input:-webkit-autofill{
+.banner.night input:-webkit-autofill {
   -webkit-text-fill-color: white !important;
 }
 
@@ -865,6 +928,12 @@ input:-webkit-autofill:active{
   }
 }
 
+@media screen and (max-width: 1290px) {
+  .box__imagen {
+    left: 2rem;
+  }
+}
+
 @media screen and (max-width: 1199px) {
   .conteiner__proyecto {
     width: 90%;
@@ -935,21 +1004,9 @@ input:-webkit-autofill:active{
   }
 }
 
-
-@media screen and (min-width: 1125px) {
-  .logo__perfil {
-    width: 390px;
-    padding-left: 4rem;
-  }
-}
-
 @media screen and (max-width: 1124px) {
   .quien__soy {
     font-size: 2.9em;
-  }
-
-  .logo__perfil {
-    padding-left: 3rem;
   }
 }
 
@@ -1002,6 +1059,16 @@ input:-webkit-autofill:active{
   .quien__soy {
     font-size: 2.6rem;
     line-height: 45px;
+  }
+
+  .box__imagen {
+    top: 1rem;
+    width: 300px;
+    height: 300px;
+  }
+
+  .box__imagen::before {
+    inset: -10px 110px;
   }
 
   .descripcion {
@@ -1076,9 +1143,10 @@ input:-webkit-autofill:active{
     margin: 3.5rem 3rem 0 5rem;
   }
 
-  .logo__perfil {
-    width: 270px;
-    padding-left: .5rem;
+  .box__imagen {
+    left: .5rem;
+    width: 290px;
+    height: 290px;
   }
 }
 
@@ -1092,7 +1160,7 @@ input:-webkit-autofill:active{
 @media screen and (max-width: 767px) {
   .quien {
     order: 1;
-    padding: 0 0 4rem 0;
+    padding: 4rem 0 4rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1111,6 +1179,12 @@ input:-webkit-autofill:active{
     flex-direction: column;
     align-items: center;
     order: 0;
+  }
+
+  .box__imagen {
+    top: 2rem;
+    width: 290px;
+    height: 290px;
   }
 
   .menu__item {
@@ -1192,12 +1266,6 @@ input:-webkit-autofill:active{
     line-height: 45px;
   }
 
-  .logo__perfil {
-    width: 260px;
-    height: 328px;
-    margin-bottom: -1rem;
-  }
-
   .contacto__col p {
     font-size: .9rem;
   }
@@ -1253,8 +1321,13 @@ input:-webkit-autofill:active{
     font-size: 2rem;
   }
 
-  .logo__perfil {
-    width: 230px;
+  .box__imagen {
+    width: 250px;
+    height: 250px;
+  }
+
+  .box__imagen::before {
+    inset: -10px 90px;
   }
 
   .menu__item {
@@ -1362,6 +1435,15 @@ input:-webkit-autofill:active{
     line-height: 35px;
   }
 
+  .box__imagen {
+    width: 230px;
+    height: 230px;
+  }
+
+  .box__imagen::before {
+    inset: -10px 80px;
+  }
+
   .menu__item {
     margin: 3.5rem 2rem 0 2rem;
   }
@@ -1379,8 +1461,12 @@ input:-webkit-autofill:active{
   .quien__soy {
     font-size: 1.4rem;
   }
+  .box__imagen {
+    width: 210px;
+    height: 210px;
+  }
 
-  .logo__perfil {
-    width: 230px;
+  .box__imagen::before {
+    inset: -10px 70px;
   }
 }
